k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: voting-app-sa
      containers:
      - name: worker
        image: devops-worker:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
#        livenessProbe:
#          exec:
#            command:
#              - sh
#              - -c
#              - pgrep dotnet
#          initialDelaySeconds: 15
#          periodSeconds: 20
#          timeoutSeconds: 3
#          failureThreshold: 6
